fix wrong alignment in testimonials block

--- a/assets/sass/components/blocks/_testimonials.sass
+++ b/assets/sass/components/blocks/_testimonials.sass
@@ -34,7 +34,6 @@
                     font-size: $font-size-base
         blockquote + figcaption
             @extend .card-footer
-            justify-content: flex-start
     .splide
         &__track
             overflow: hidden
